[package]
name = "palantir"
license = "MIT OR Apache-2.0"
description = "Work in progress P2P networking library designed for use with Fluxion."
repository = "https://github.com/peperworx/palantir"
version = "0.0.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluxion = { version = "0.10.0", features = ["foreign", "serde"] }
serde = "1.0.214"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
wtransport = "0.4.0"
