[package]
name = "palantir"
license = "MIT OR Apache-2.0"
description = "Work in progress P2P networking library designed for use with Fluxion."
repository = "https://github.com/peperworx/palantir"
version = "0.0.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
fluxion = { version = "0.10.5", features = ["foreign", "serde"] }
pot = "3.0.1"
serde = "1.0.214"
slotmap = { version = "1.0.7", features = ["serde"] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
wtransport = { version = "0.4.0", features = ["dangerous-configuration"] }
